--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#validity">Validity </a>
+                    </li>
                 </ul>
                 
             </div>
@@ -229,7 +232,7 @@
     </footer>
 
     <!-- load javascript after loading all html content -->
-    <script src="/script.js"></script>
+    <script src="script/script.js"></script>
 
 </body>
 
