--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#validity">Validity </a>
+            <a class="nav-link" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fvikasnehra1.github.io%2Ffoxtrot-midterm%2F#l220c63">Validity </a>
           </li>
         </ul>
 
@@ -123,7 +123,7 @@
       </div>
 
     </div>
-    </div>
+    
   </section>
 
   <!-- portfolio section-->
