--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Portfolio Website</title>
+  <title>Foxtrot</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- linking css file -->
@@ -33,13 +33,13 @@
             <a class="nav-link" href="#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#portfolio">Portfolio</a>
+            <a class="nav-link" href="#project">rojects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fvikasnehra1.github.io%2Ffoxtrot-midterm%2F#l220c63">Validity </a>
+            <a class="nav-link" href="#validity">Validity </a>
           </li>
         </ul>
 
@@ -103,8 +103,8 @@
           <div class="card servicesText">
             <div class="card-body">
               <i class='fas servicesIcon fa-layer-group'></i>
-              <h4 class="card-title mt-3">Website Design</h4>
-              <p class="card-text mt-3">I have experience of Projects that i have done my college. Checkout my designs in portfolio section.
+              <h4 class="card-title mt-3">DevOps</h4>
+              <p class="card-text mt-3"> I integrates and automates the work of software development and IT operations as a means for improving and shortening the systems development life cycle.
               </p>
             </div>
           </div>
@@ -114,8 +114,8 @@
           <div class="card servicesText">
             <div class="card-body">
               <i class='far servicesIcon fa-check-circle'></i>
-              <h4 class="card-title mt-3">Web Games</h4>
-              <p class="card-text mt-3">As a web game developer, I have experience designing and developing games that are engaging, entertaining, and challenging for players. This involves creating game mechanics, designing game levels, developing user interfaces, and implementing sound and visual effects.
+              <h4 class="card-title mt-3">Basic-electrical-engineering</h4>
+              <p class="card-text mt-3"> I make devices using concepts of Basic-electrical-engineering using adrino 
               </p>
             </div>
           </div>
@@ -126,8 +126,8 @@
     
   </section>
 
-  <!-- portfolio section-->
-  <section id="portfolio">
+  <!-- project section-->
+  <section id="project">
     <div class="container mt-3">
       <h1 class="text-center">Projects</h1>
       <div class="row">
@@ -145,20 +145,20 @@
         </div>
 
         <div class="col-lg-4 mt-4">
-          <div class="card portfolioContent">
+          <div class="card projectContent">
             <img class="card-img-top" src="https://www.smartsheet.com/sites/default/files/ic-og-AIVoiceAssistants-Twitter.jpg" alt="Card image" style="width:100%">
             <div class="card-body">
               <h4 class="card-title">Virtual Voice Assistant</h4>
               <p class="card-text">It is a Virtual Voice Assistant made with the help of python</p>
               <div class="text-center">
-                <a href="#" class="btn btn-success">Link</a>
+                <a href="https://github.com/VikAsNeHrA1/Virtual-Voice-Assistant-" target="_blank" class="btn btn-success">Link</a>
               </div>
             </div>
           </div>
         </div>
 
         <div class="col-lg-4 mt-4">
-          <div class="card portfolioContent">
+          <div class="card projectContent">
             <img class="card-img-top" src="https://raghavendramanjegowda.com/lidar-obstacle-detection/reference/figures/pipeline.png" alt="Card image" style="width:100%">
             <div class="card-body">
               <h4 class="card-title">Obstacle Detector </h4>
@@ -172,7 +172,7 @@
                 ultrasonic sensor
                 .</p>
               <div class="text-center">
-                <a href="#" class="btn btn-success">Link</a>
+                <a href="https://github.com/VikAsNeHrA1/BEEE_CU19/tree/master/Exp6_obstacle" target="_blank" class="btn btn-success">Link</a>
               </div>
             </div>
           </div>
@@ -237,8 +237,15 @@
         <a href="https://codepen.io/vikasnehra1" target="_blank"><i class="fab fa-codepen"></i></a>
         <a href="https://github.com/VikAsNeHrA1" target="_blank"><i class="fab fa-github"></i></a>
       </div>
+      <!-- join our group -->
+      <div class="join-group mt-4">
+        <h4>Join Our Group</h4>
+        <p>Get exclusive updates and offers by joining our group today.</p>
+        <a href="https://www.linkedin.com/groups/12058862/" target="_blank" class="btn btn-primary">Join Now</a>
+      </div>
     </div>
   </footer>
+  
 
   <!-- load javascript after loading all html content -->
   <script src="script/script.js"></script>
