--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#project">rojects</a>
+            <a class="nav-link" href="#project">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
